# Quarto-Blog

./: .gitignore  .nojekyll  08_collab.html  CLAUDE.html  CLAUDE.md  LICENSE  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: quarto_publish.yml
ai-glossary/: index.html  index.qmd
ai-glossary/terms/: cross-entropy-loss.html  cross-entropy-loss.qmd  long_tail.html  long_tail.qmd  loss_func.html  loss_func.qmd  mae.html  mae.qmd  mse.html  mse.qmd  one-hot-encoding.html  one-hot-encoding.qmd  overfitting.html  overfitting.qmd  regression.html  regression.qmd  rmse.html  rmse.qmd
dl-from-scratch/: _metadata.yml  index.html  index.qmd
dl-from-scratch/lessons/: Introduce of machine learning.html  Introduce of machine learning.ipynb
posts/: _metadata.yml  subscribe.html
posts/Fine-tuning for Image Classification with 🤗 Transformers/: image_classification.html  image_classification.ipynb
posts/Quarto个人博客搭建/: index.html  index.ipynb
posts/Tokenizer：BPE、WordPiece与Unigram分词算法/: index.html  index.ipynb
posts/UserDict vs dict/: index.html  index.ipynb
posts/post-with-code/: index.html
posts/welcome/: index.html
posts/图像分类任务数据增强可视化/: helpers.py  index.html
posts/基于CIFAR10的微调/: index.html  index.ipynb
posts/基于MNIST全量数据集的神经网络训练/: index.html  index.ipynb
posts/深度学习术语/: index.ipynb
